ideax/static/css/idea.css
/* ... */
input.menu-input{
  display: none;
}

.idea-options input:checked ~ .options-content{
  max-height: inherit;
  border: 1px solid #E1E1E1;
  //margin-top: 5px;
}

.options-content{
  max-height: 0;
  overflow: hidden;
  background: #fff;
  padding: 0px;
  width: 125px;
  border-left: 1px solid #E1E1E1;
  border-right: 1px solid #E1E1E1;
  z-index: 5;
  box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
  position: absolute;
  top: 35px;
  right: 20px;

}

.options-content a{
  color: black;
}

.options-content a:hover{
  color: black;
}

.options-content a:hover{
  background: #EEEEEE;
}

.options-content div.action{
  display: inline-block;

}

.options-content .actions{
  //background: #cecece;
  font-size: 1.3em;
  margin: 0;
  display: flex;
  justify-content: center;
  padding: 8px 0;
}

.actions button,
.actions a{
  padding: 0;
  background: inherit;
  border: none;
  font-size: 0.8em;
}

.actions button:hover{
  cursor: pointer;
}

.action{
  margin: 0 9px;
}

.action button:hover,
.action a:hover{
  background: inherit;
  color: inherit;
}

.edit a{
  color: #1f5093;
}


.delete button{
  color: #e52d2a;
}

.options-content li:nth-last-child(1){
  border-top: 1px solid #E1E1E1;
  padding: 15px;

}


/*idea card body*/

.idea-body{
  text-align: left;
  padding: 0 20px;
  font-size: 0.9em;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 10px 20px;
  min-height: 200px;
}

.idea-body:hover{
  cursor: pointer;
}

.bold{
  font-weight: bold;
}

.idea-title{
  font-size: 1.1em;
  font-weight: bold;
}

/*idea card footer*/

.idea-footer{
  display: flex;
  justify-content: space-around;
  align-items: center;
  /*! position: absolute; */
  /*! bottom: 0; */
  margin: 0;
  width: 100%;
  border-top: 1px solid #E1E1E1;
  /*! max-width: 524px; */
  padding: 15px 0 5px 0;



  max-height: 40px;
}

.idea-footer p{
  margin-bottom: 0;

}

.idea-footer .button-group button{
  background-color: #E1E1E1;border: 1px solid #AEAEAE;

}

.phase{
  display: flex;
  align-items: center;
}

.phase-name{
  font-size: 1.2em;
  font-weight: 400;
}

.phase-symbol{
  display: flex;
  width: 30px;
  height: 30px;
  border-radius: 9px;
  justify-content: center;
  align-items: center;
  margin-right: 5px;
  font-size: 1.6em;

}

.discussion-phase{
  color: #f68b2c;

}

.rate-phase{
  color: #D95578;

}

.aproved-phase{
  color: #107906;
}

.develop-phase{
  color: #30a2a6;

}

.done-phase{
  color: #065B8D;
}

.archived-phase{
  color: #726C69;
}

.phase-indicator{
  border-radius: 10px;

  width: 25px;
  height: 25px;
  margin-right: 5px;
}

.discussion{
  border-left: 5px solid #f68b2c !important;

}

.rate{
  border-left: 5px solid #D95578 !important;
}

.aproved{
    border-left: 5px solid #107906 !important;
}

.develop{

  border-left: 5px solid #30a2a6 !important;
}

.done{
  border-left: 5px solid #065B8D !important;
}

.archived{
  border-left: 5px solid #726C69 !important;
}

.like-menu{
  display: flex;
  align-items: center;
  font-size: 1.3em;
}


.like-menu p{
  display: inline;

  margin-bottom: 0;
  margin-left: -3px;
  font-size: 1.15em;

}

.liked a,
.disliked a{
  text-decoration: none !important;
  outline: 0 !important;
}

.liked a:hover,
.disliked a:hover,
.liked a:focus,
.disliked a:focus{
  color: inherit !important;
  text-decoration: none !important;
}


.liked,
.liked a{
  color: #00B238;
}

.disliked,
.disliked a{
  margin-left: 5px;
  color: #FF040099;
}

/*Footer*/

footer {
  background: #fafafa;
  border-top: 1px solid #E6E6E6;
  min-height: 60px;
  display: flex !important;
  align-items: center;
  justify-content: center;
  z-index: 50;
  width: 100%;
  bottom: 0;
}

footer p {
  margin: 0;
}

footer.landing-page{
  min-height: 60px;
  background: #333;
  color: #E6E6E6;
}

/*Modals*/

.modal-dialog {
  margin-top: 200px;
  max-width: 600px !important;
}

#modal-idea-crud .modal-content {
  border-left: 5px solid #36aed3;
  font-family: 'Open Sans', sans-serif;
  padding: 0 10px 0 5px;
}

#modal-idea .idea {
  margin-left: 17px;
  margin-top: 25px;
}

.modal-header{
  display: flex;
  flex-direction: row-reverse;
}

.modal-header h4 {
    display: inline;
    margin: 0;
}

.modal-header svg{
    font-size: 2em;
    margin-right: 10px;
    color: #36aed3;
}

.modal-title h1{
  font-size: 1em;
}

.modal-title span{
  font-size: 1.1em;
}

.modal-body textarea {
  width: 100%;
  resize: none;
}


input#id_title {
  width: 100%;
}

.modal-body label {
  display: block;
}

.modal-footer button {
  background: #36aed3;
  border: 1px solid #36aed3;
  color: white;
  font-weight: bolder;
  font-size: 1em;
  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
}

/*Corpo da página de ideia*/

.idea-page{
  display: flex;
  justify-content: space-between;
  //height: 100%;
  margin: 50px 0;
  font-family: 'Open Sans', sans-serif;
}

.idea-desc{
  width: 60%;
  height: 50%;
  //background-color: #fafafa;
  border-radius: 2px;
  //box-shadow: 0 1px 2px #c9cccd;
  //border: 1px solid #E1E1E1;
  display: flex;
  flex-direction: column;
}

.idea-desc p{
  line-height: 1.8;

}

.idea-interaction{
  width: 37%;
  height: 90vh;
  //height: inherit;
  //background-color: #fafafa;
  border-radius: 2px;
  //box-shadow: 0 1px 2px #c9cccd;
  //border: 1px solid #E1E1E1;
}

.separator{
  width: 1px;
  background-color: #B4B0B0;
  margin: 0 25px;
}

.idea-desc-title{
  margin-top: 30px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.idea-desc-title p{
  margin-bottom: 5px;
}

.desc-body{
  height: 80%;
  overflow-y: auto;
  padding: 20px 0 20px 20px;
}

.desc-body h3{
  font-size: 1.4em;
  //font-weight: bold;
}

.desc-body p{
  line-height: 1.8;
}

.desc-footer{
  height: 10%;
}

.desc-title{
  font-size: 1.6em;
  text-align: center;
}

.author{
  font-size: 0.9em;
  text-align: center;
}

#idea-tab{
  display: flex;
  justify-content: flex-start;
}
/* ... */

